--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <p>start master</p>
     <p>start new-branch</p>
     <p>start new-branch-2</p>
+    <p></p>
 </body>
 
 </html>
